--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,10 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+h1 {
+    padding: 30px 0;
+    text-align: center;
+    letter-spacing: 0.5px;
+    font-size: 3rem;
+}
