--- a/css/style.css
+++ b/css/style.css
@@ -10,3 +10,20 @@ h1 {
     letter-spacing: 0.5px;
     font-size: 3rem;
 }
+
+.btn_container {
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+.list_container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.list_container li {
+    list-style: none;
+    text-align: center;
+    padding: 20px;
+}
