--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,15 @@ h1 {
     margin-bottom: 10px;
 }
 
+.btn_container button {
+    color: red;
+    border: 2px solid red;
+    padding: 10px;
+    background-color: white;
+    border-radius: 10px;
+    cursor: pointer;
+}
+
 .list_container {
     display: flex;
     flex-direction: column;
@@ -26,4 +35,7 @@ h1 {
     list-style: none;
     text-align: center;
     padding: 20px;
+    margin: 10px;
+    border: 2px solid black;
+    border-radius: 5px;
 }
